Arrumado o problema de falta de memória e adicionado o campo de RUNNING_THREADS no RunningInfo.txt